--- a/content/data/projects.json
+++ b/content/data/projects.json
@@ -2,7 +2,7 @@
   "projects": [
         {
         "img": "../images/project/portfoliowebsite.png",
-        "title": "Portofolio Website",
+        "title": "Portfolio Website",
         "description": "My personal portfolio website. </br> (You are currently here).",
         "link": "",
         "github": "https://github.com/TigoV2/PortfolioWebsite"
