--- a/content/data/projects.json
+++ b/content/data/projects.json
@@ -1,21 +1,21 @@
 {
   "projects": [
         {
-        "img": "../images/project/portfoliowebsite.png",
+        "img": "../../content/images/project/portfoliowebsite.png",
         "title": "Portfolio Website",
         "description": "My personal portfolio website. </br> (You are currently here).",
         "link": "",
         "github": "https://github.com/TigoV2/PortfolioWebsite"
     },
     {
-        "img": "../images/project/gooberos.jpg",
+        "img": "../../content/images/project/gooberos.jpg",
         "title": "Goober OS",
         "description": "A linux like \"Web OS\" command line operating system made in JavaScript, HTML and CSS for a make-a-thon.",
         "link": "https://jeav2.github.io/gooberos/",
         "github": "https://github.com/JeaV2/gooberos"
     },
     {
-      "img": "../images/project/TypeScript.avif",
+      "img": "../../content/images/project/TypeScript.avif",
       "title": "API-Typescript project",
       "description": "One of my current project, first TypeScript project.",
       "link": "",
