fixed my loading ts/js for this version

--- a/content/data/projects.json
+++ b/content/data/projects.json
@@ -26,7 +26,7 @@
       "title": "Pokemon-Terrainium",
       "description": "Pokemon Terrainium is a fan made Pokemon game made in RPG Maker XP, My friend and I are working on right now.",
       "link": "",
-      "github": "https://github.com/dragonfreddy5/Pokemon-Terrainium"
+      "github": ""
     }
   ]
 }
