--- a/content/data/projects.json
+++ b/content/data/projects.json
@@ -5,7 +5,7 @@
         "title": "Portfolio Website",
         "description": "This is my personal portfolio website, </br> Where you can explore my projects, CV, and creative journey. </br> Discover my skills, passion, and vision. </br> (You're currently on this page!)",
         "link": "",
-        "github": "https://github.com/TigoV2/PortfolioWebsite"
+        "github": "https://github.com/TigoV2/TigoV2.github.io"
     },
     {
         "img": "../../content/images/project/gooberos.jpg",
