--- a/content/data/projects.json
+++ b/content/data/projects.json
@@ -26,7 +26,17 @@
       "title": "Pokemon-Terrainium",
       "description": "Pokemon Terrainium is a fan made Pokemon game made in RPG Maker XP, My friend and I are working on right now.",
       "link": "",
-      "github": ""
+      "github": "",
+      "subContent": [
+        {
+          "title": "Gifted - HA",
+          "description": "A custom made plugin for Pokemon Terrainium, that adds a chance for the hidden ability to every gifted pokemon, like a starter or other pokemon that you get for free."
+        },
+        {
+          "title": "Pokemon-Terranium Biomes",
+          "description": "A custom made plugin for Pokemon Terrainium, that adds biomes to the game, used for battle machanics"
+        }
+     ]
     }
   ]
 }
