--- a/content/data/projects.json
+++ b/content/data/projects.json
@@ -5,21 +5,24 @@
         "title": "Portfolio Website",
         "description": "This is my personal portfolio website, </br> Where you can explore my projects, CV, and creative journey. </br> Discover my skills, passion, and vision. </br> (You're currently on this page!)",
         "link": "",
-        "github": "https://github.com/TigoV2/TigoV2.github.io"
+        "github": "https://github.com/TigoV2/TigoV2.github.io",
+        "tags": ["HTML", "CSS", "JavaScript", "Bootstrap"]
     },
     {
         "img": "../../content/images/project/gooberos.jpg",
         "title": "Goober OS",
         "description": "A linux like \"Web OS\" command line operating system made for a make-a-thon using: </br> JavaScript, HTML and CSS.",
         "link": "https://jeav2.github.io/gooberos/",
-        "github": "https://github.com/JeaV2/gooberos"
+        "github": "https://github.com/JeaV2/gooberos",
+        "tags": ["JavaScript", "HTML", "CSS"]
     },
     {
       "img": "../../content/images/project/TypeScript.avif",
       "title": "API-Typescript project",
       "description": "My current personal project using TypeScript and Python, to learn TypeScript and APIs. </br> Made for hypixel bedwars players. </br> (Work in progress).",
       "link": "",
-      "github": ""
+      "github": "",
+      "tags": ["TypeScript", "Python", "API"]
     },
     {
       "img": "",
@@ -27,6 +30,7 @@
       "description": "Pokemon Terrainium is a fan made Pokemon game made in RPG Maker XP, My friend and I are working on right now.",
       "link": "",
       "github": "",
+      "tags": ["RPG Maker XP", "Ruby"],
       "subContent": [
         {
           "title": "Gifted - HA",
