--- a/content/data/projects.json
+++ b/content/data/projects.json
@@ -35,12 +35,12 @@
         {
           "title": "Gifted - HA",
           "description": "A custom made plugin for Pokemon Terrainium, that adds a chance for the hidden ability to every gifted pokemon, like a starter or other pokemon that you get for free.",
-          "github": "https://github.com/JeaV2/gooberos"
+          "github": ""
         },
         {
           "title": "Pokemon-Terranium Biomes",
           "description": "A custom made plugin for Pokemon Terrainium, that adds biomes to the game, used for battle machanics",
-          "github": "https://github.com/JeaV2/gooberos"
+          "github": ""
         }
      ]
     }
